# DS-Practical-1

./: code_skeleton_industry_classification.ipynb  pyproject.toml  requirements.txt
